refactor: fix sonar findings